Fix alignment of nav bar

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -11,8 +11,6 @@ nav {
   background-color: $green;
   padding: 0.5*$gutter $gutter;
 
-  img { height: $nav-height; }
-
   position: fixed;
   width: $max-width + 2 * $gutter;
   margin: auto;
@@ -22,9 +20,13 @@ nav {
 
   .link {
     @include span-columns(2 of 12);
-    text-align: right;
+    height: $nav-height;
+    position: relative;
 
     a {
+      position: absolute;
+      bottom: 0;
+      right: 0;
       font-family: $light;
       font-size: 2em;
       text-decoration: none;
@@ -35,7 +37,11 @@ nav {
     &:first-child {
       @include span-columns(6 of 12);
       text-align: left;
-      a { font-size: 1em; }
+      a {
+        right: auto; /* Float to left */
+        font-size: 1em;
+      }
+      img { height: $nav-height; }
     }
   }
 
@@ -58,6 +64,7 @@ section {
     .section-header {
       z-index: inherit;
       text-align: center;
+      margin-bottom: $gutter;
     }
   }
 }
